# courses

./: README.md
code/: README.md  main.py  playground.ipynb  pyproject.toml
code/src/transformer/tokenizers/: BPE_tokenizer.py  __init__.py  byte_pair_merges.json  byte_pair_vocab.json  byte_tokenizer.py  tokenizer.py
notes/: README.md
notes/analysis/: calc_mit.typ  zorich.typ
notes/biology/mechanics/: mechanics.typ
notes/biology/organic_chemistry/: organic_chemistry.typ
notes/deep_learning/: transformers.typ
notes/deep_learning/attention/: attention.typ
notes/deep_learning/ssl/: dino.typ  ssl_general.typ
notes/differential_equations/: abstract_algebra.typ  ordinary.typ
notes/machine_learning/deep_learning/ssl/: ssl_general.typ
notes/machine_learning/deep_learning/vision_transformer/: vit.typ
notes/machine_learning/probabilistic/: probabilstic_ml.typ
notes/machine_learning/statistical/: statistical_ml.typ
notes/maths/: linear_algebra_mit.typ  math4cs.typ
notes/probability_theory/: probability.typ  probability_mit.typ
