[project]
name = "code"
version = "0.1.0"
description = "this is a project to create molecular neural network."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mlflow>=2.22.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "sympy>=1.14.0",
    "torch>=2.7.0",
]
